$Id: History,v 1.11 2000-02-25 16:00:33 gcosmo Exp $
----------------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

             History file for geometry/solids/BREPS
	     --------------------------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

25/02/2000 : G. Cosmo		  breps-V01-00-02
 G4BSplineSurface[.hh.cc]
   - fixed dynamic memory allocation problem with creation of temporary
     hits and manipulation of knots.
   - rationalized dependencies over G4UVHit, G4ControlPoints and
     G4BoundingBox3D classes.
   - added initialization of pointers in constructor where missing.
 G4BSplineSurfaceWithKnots[.hh.cc]
   - created dummy classes.
 G4ConicalSurface.cc
   - Modified diagnostic message.
 G4PointRat.hh
   - Removed useless inclusion of G4UVHit.hh.
 G4UVHit.hh
   - Added missing initialization of data-members where needed.
   - Initialized 'next' pointer to zero in costructor.
 test/stepfiles
   - G4msgc_barrel_solid.stp was corrupted. Fixed.
   - Enhanced PERL script correct.pl to parse more complex STEP files.

14/02/2000 : G. Cosmo		  breps-V01-00-01
 G4BSplineSurface.cc - fixed warnings on HP-aCC
   - removed cast of G4Surface* to G4SurfaceList* (!) in function
     FinalIntersection().
   - replaced wherever needed explicit cast to G4PointRat from G4Point3D
     and viceversa, by using appropriate access functions instead.